--- a/ServerSide/config/Discord-Integration.cfg
+++ b/ServerSide/config/Discord-Integration.cfg
@@ -14,7 +14,7 @@ general {
         # PLACEHOLDERS:
         # %online% - Online Players
         # %max% - Maximum Player Amount
-        S:BOT_GAME_NAME=Minecraft with %online% players
+        S:BOT_GAME_NAME=Playing on Dangerous World Modpack Server
 
         # Valid values:
         # WATCHING
@@ -28,7 +28,7 @@ general {
         S:BOT_TOKEN=
 
         # The channel ID where the bot will be working in
-        S:CHANNEL_ID=
+        S:CHANNEL_ID=000000000
 
         # When description updates are enabled, how long should it wait before updating? (in milliseconds)
         # Setting this too low can cause RateLimits from discord
@@ -85,13 +85,13 @@ general {
 
     webhook {
         # Wether or not the bot should use a webhook (it will create one)
-        B:BOT_WEBHOOK=false
+        B:BOT_WEBHOOK=true
 
         # The avatar to be used for server messages
         S:SERVER_AVATAR=https://raw.githubusercontent.com/ErdbeerbaerLP/Discord-Chat-Integration/master/images/srv.png
 
         # The username of the server
-        S:SERVER_NAME=Server
+        S:SERVER_NAME=Playing on Dangerous World Modpack Server
     }
 
     ##########################################################################################################
@@ -202,7 +202,7 @@ general {
 
     commands {
         # The Role ID of your Admin Role
-        S:ADMIN_ROLE_ID=0
+        S:ADMIN_ROLE_ID=
 
         # The prefix of the commands like list
         S:CMD_PREFIX=/
@@ -303,10 +303,10 @@ general {
         S:IGNORECMD_UNIGNORE=You are no longer ignoring Discord messages!
 
         # The message displayed when typing /discord in the server chat
-        S:MESSAGE=Join our discord! https://discord.gg/myserver
+        S:MESSAGE=Join our discord! http://discord.gg/myserver
 
         # The url to open when clicking the /discord command text
-        S:URL=https://discord.gg/myserver
+        S:URL=http://discord.gg/myserver
     }
 
     ##########################################################################################################
