Fix no recipe of chromium singularity

--- a/ClientSide/overrides/config/extendedcrafting.cfg
+++ b/ClientSide/overrides/config/extendedcrafting.cfg
@@ -136,6 +136,8 @@ singularity {
     # - Example: 123456 would color it as whatever that color is.
     S:custom_singularities <
         0;glitch_infused;deepmoblearning:glitch_infused_ingot;16A085
+        1;ingot_varsium;ore:ingotVarsium;FFA703
+        2;ingot_lyon;ore:ingotLyon;A07828
      >
 
     # The catalyst required for the default Singularity recipes. modid:itemid:metadata [default: extendedcrafting:material:11]
