--- a/ClientSide/overrides/config/craftpresence.properties
+++ b/ClientSide/overrides/config/craftpresence.properties
@@ -1,68 +1,77 @@
 #CraftPresence - Configuration Settings
-#Current Version -> v1.7.0 (Schema v1)
+#Current Version -> v1.7.6 (Schema v1)
 #
 #Last synchronized:
-#Fri Sep 18 09:58:07 CST 2020
-Verbose_Mode=false
-Enable_Commands=false
-Player_Health_Placeholder=Health\: &current&/&max&
-Detect_MultiMC_Instance=false
-Server_Messages=[default;Playing Dangerous World Modpack Server]
-Detect_Technic_Pack=false
-World_Data_Placeholder=On &worldname&
-Show_Dimension=true
-Show_Biome=true
-LAN_Game_Message=Playing on a LAN Server
-Small_Image_Key_Format=&SERVER&&PACK&
-Default_Server_Icon=default
-Dimension_Messages=[default;In the &dimension&]
-Details_Message_Format=&MAINMENU&&DIMENSION&
-Default_Server_Name=Dangerous World Modpack Server
-Detect_MCUpdater_Instance=false
-Mods_Placeholder=&modcount& Mod(s)
-Large_Image_Key_Format=&MAINMENU&&DIMENSION&
-Show_Logging_in_Chat=false
-Tooltip_Border_Color=0x505000FF
-Enable_Join_Requests=false
-Entity_Target_Messages=[default;Targeting &entity&]
-Player_Outer_Info_Placeholder=As &name&
-Schema_Version=1
+#Fri Jan 29 17:04:30 CST 2021
+Enable_Per-Gui_System=false
 Strip_Translation_Colors=false
 Debug_Mode=false
-Render_Tooltips=true
-Language_ID=en_us
+Enable_Commands=false
+Tooltip_Border_Color=0x505000FF
+Reset_Time_on_Init=false
+Server_Messages=[default;Playing Dangerous World Modpack Server]
 Entity_Riding_Messages=[default;Riding &entity&]
-Default_Server_MOTD=Playing Dangerous World Modpack Server
-Client_ID=
+Entity_Target_Messages=[default;Targeting &entity&]
+Game_State_Message_Format=&SERVER&
+Language_ID=en_us
+Detect_World_Data=true
+Enable_Per-Entity_System=false
+Show_Logging_in_Chat=false
+Enable_Per-Item_System=false
+Player_Coordinate_Placeholder=At &xPosition&, &zPosition&
+Default_Icon=grass
+Config_Gui_Keybind=0
+Large_Image_Text_Format=&MAINMENU&&DIMENSION&
+Player_Inner_Info_Placeholder=(&health&)
+Gui_Background_Color=minecraft;textures/gui/options_background.png
+Format_Words=true
+Detect_MCUpdater_Instance=false
+Render_Tooltips=true
+Schema_Version=1
+Item_Messages=[default;Holding &item&]
 Split_Character=;
-Show_Elapsed_Time=true
+Default_Server_Name=Dangerous World Modpack Server
+Singleplayer_Game_Message=Playing Singleplayer on Dangerous World Modpack
 Refresh_Rate=5
+Player_Outer_Info_Placeholder=As &name&
+Small_Image_Key_Format=&SERVER&&PACK&
 Entity_Attacking_Messages=[default;Attacking &entity&]
 Loading_Message=Loading...
-Biome_Messages=[default;Playing in &biome&]
-Singleplayer_Game_Message=Playing Singleplayer on Dangerous World Modpack
-Gui_Messages=[default;In &screen&]
-Last_MC_Version_ID=340
-Modpack_Message=Dangerous World Modpack
-Enable_Per-Gui_System=false
-Default_Icon=grass
-Fallback_Pack_Placeholder=
+Detect_Dimension_Data=true
 Detect_Curse_Manifest=true
-Player_Inner_Info_Placeholder=(&health&)
-Config_Gui_Keybind=0
-Show_Game_Status=true
-Tooltip_Background_Color=0xF0100010
-Item_Messages=[default;Holding &item&]
-Player_Coordinate_Placeholder=At &xPosition&, &zPosition&
-Main_Menu_Message=In the Main Menu
-Gui_Background_Color=minecraft;textures/gui/options_background.png
-Player_Items_Placeholder=Items\: &main&
+Verbose_Mode=false
+Button_Background_Color=minecraft;textures/gui/widgets.png
+Show_Elapsed_Time=true
+Dimension_Messages=[default;In the &dimension&]
+Player_Health_Placeholder=Health\: &current&/&max&
+World_Data_Placeholder=On &worldname&
 Default_Dimension_Icon=overworld
+Include_Extra_Gui_Classes=false
+Detect_MultiMC_Instance=false
 Player_List_Placeholder=&current& / &max& Players
-Small_Image_Text_Format=&SERVER& &PACK&
+Biome_Messages=[default;Playing in &biome&]
+Tooltip_Background_Color=0xF0100010
+LAN_Game_Message=Playing Dangerous World Modpack LAN Server
+Gui_Messages=[default;In &screen&]
 Vivecraft_Message=Playing in VR via Vivecraft
-Enable_Per-Item_System=false
-Enable_Per-Entity_System=false
-Game_State_Message_Format=&SERVER&
-Large_Image_Text_Format=&MAINMENU&&DIMENSION&
-Format_Words=true
+Fallback_Pack_Placeholder=
+Player_Items_Placeholder=Items\: &main&
+Last_MC_Version_ID=340
+Mods_Placeholder=&modcount& Mod(s)
+Rounding_Size=3
+Party_Privacy=1
+Auto_Register=false
+Details_Message_Format=&MAINMENU&&DIMENSION&
+Detect_Biome_Data=false
+Default_Server_Motd=Dangerous World Modpack Server
+Strip_Extra_Gui_Elements=false
+Client_ID=
+Default_Server_Icon=default
+Detect_Technic_Pack=false
+Reduced_Background_Tint=true
+Main_Menu_Message=In the Main Menu
+Large_Image_Key_Format=&MAINMENU&&DIMENSION&
+Modpack_Message=Dangerous World Modpack
+Default\ Biome\ Icon=unknown
+Small_Image_Text_Format=&SERVER& &PACK&
+Enable_Join_Requests=false
