--- a/ServerSide/config/extendedcrafting.cfg
+++ b/ServerSide/config/extendedcrafting.cfg
@@ -136,8 +136,52 @@ singularity {
     # - Example: 123456 would color it as whatever that color is.
     S:custom_singularities <
         0;glitch_infused;deepmoblearning:glitch_infused_ingot;16A085
-        1;ingot_varsium;ore:ingotVarsium;FFA703
-        2;ingot_lyon;ore:ingotLyon;A07828
+        1;varsium;ore:ingotVarsium;FFA703
+        2;lyon;ore:ingotLyon;A07828
+        3;flint;ore:ingotFlint;606060
+        4;awakened_draconium;draconicevolution:draconic_ingot;F65F26
+        5;ice_dragonsteel;ore:ingotIceDragonsteel;04779B
+        6;fire_dragonsteel;ore:ingotFireDragonsteel;580B04
+        7;uranium_235;ic2:nuclear:1;32A90C
+        8;crystaltine;ore:ingotCrystaltine;33ECF2
+        9;ender;extendedcrafting:material:36;1D6D23
+        10;ionite_crystal;ore:crystalIonite;1DC0C5
+        11;cyanite;ore:ingotCyanite;18D7DD
+        12;reinforced_alloy;ore:alloyElite;1AD9FB
+        13;yellow_diamond;ore:gemYellowDiamond;E8DF1D
+        14;resonating_gem;astralsorcery:itemcraftingcomponent:4;23AFC8
+        15;starmetal;ore:ingotAstralStarmetal;020E9A
+        16;fluxed_phyto_gro;thermalfoundation:fertilizer:2;94E329
+        17;terrestrial_artifact;biomesoplenty:terrestrial_artifact;D8BACF
+        18;meteoric_iron;ore:ingotMeteoricIron;5D4E58
+        19;desh;ore:ingotDesh;2A2830
+        20;whetstone_level3;erebus:whetstone:3;791BBB
+        21;void_metal;ore:ingotVoid;2F024E
+        22;crystalized_menril_chunk;integrateddynamics:crystalized_menril_chunk;0074AE
+        23;advanced_wandcore;notenoughwands:advanced_wandcore;D0D31D
+        24;thorium_oxide;ore:ingotThoriumOxide;282828
+        25;hsla_steel;ore:ingotHSLASteel;D474D4
+        26;extreme_alloy;ore:ingotExtreme;900303
+        27;ebony_psimetal;ore:ingotEbonyPsi;201A1A
+        28;spectre;randomthings:ingredient:3;98CCFF
+        29;octine;ore:ingotOctine;F59E07
+        30;mud_brick;thebetweenlands:items_misc:10;442C02
+        31;energetic_alloy;ore:ingotEnergeticAlloy;EB8315
+        32;redstone_alloy;ore:ingotRedstoneAlloy;B41717
+        33;conductive_iron;ore:ingotConductiveIron;964A83
+        34;pulsating_iron;ore:ingotPulsatingIron;4FD16C
+        35;dark_steel;ore:ingotDarkSteel;383A38
+        36;end_steel;ore:ingotEndSteel;A3A736
+        37;soularium;ore:ingotSoularium;5C4930
+        38;construction_alloy;ore:ingotConstructionAlloy;7D7E77
+        39;ironwood;ore:ingotIronwood;4C4D2E
+        40;knightmetal;ore:ingotKnightmetal;858665
+        41;fiery;ore:ingotFiery;7A4D02
+        42;realmite;ore:ingotRealmite;BF8A32
+        43;shadow_bar;divinerpg:shadow_bar;5F5C57
+        44;call_of_the_watcher;divinerpg:call_of_the_watcher;1A76B1
+        45;zanite_gemstone;aether_legacy:zanite_gemstone;B611FD
+        46;ambrosium_shard;aether_legacy:ambrosium_shard;F8FF22
      >
 
     # The catalyst required for the default Singularity recipes. modid:itemid:metadata [default: extendedcrafting:material:11]
