Edit discord info

--- a/ClientSide/overrides/config/craftpresence.properties
+++ b/ClientSide/overrides/config/craftpresence.properties
@@ -65,7 +65,7 @@ Details_Message_Format=&MAINMENU&&DIMENSION&
 Detect_Biome_Data=false
 Default_Server_Motd=Dangerous World Modpack Server
 Strip_Extra_Gui_Elements=false
-Client_ID=
+Client_ID=712042855480426507
 Default_Server_Icon=default
 Detect_Technic_Pack=false
 Reduced_Background_Tint=true
