--- a/ServerSide/config/techguns.cfg
+++ b/ServerSide/config/techguns.cfg
@@ -135,6 +135,14 @@ general {
         iceandfire:glacier
         integrateddynamics:biome_meneglin
         aether_legacy:aether_highlands
+        divinerpg:skythern
+        divinerpg:wildwood
+        divinerpg:arcana
+        divinerpg:apalachia
+        divinerpg:iceika
+        divinerpg:vethea
+        divinerpg:eden
+        divinerpg:mortum
      >
 
     # Up to which distance to worldspawn only mobs with danger level up to 0 will spawn [range: 0 ~ 2147483647, default: 500]
