Fix the grammar of discord chat

--- a/ServerSide/config/Discord-Integration.cfg
+++ b/ServerSide/config/Discord-Integration.cfg
@@ -163,7 +163,7 @@ general {
 
         # PLACEHOLDERS:
         # %player% - The player´s name
-        S:PLAYER_LEFT_MSG=%player% leave the server
+        S:PLAYER_LEFT_MSG=%player% left the server
 
         # PLACEHOLDERS:
         # %player% - The player´s name
