--- a/ServerSide/config/brandon3055/DraconicEvolution.cfg
+++ b/ServerSide/config/brandon3055/DraconicEvolution.cfg
@@ -437,7 +437,7 @@ World {
         B:draconium_ingot=true
         B:dragon_heart=true
         B:ender_energy_manipulator=true
-        B:info_tablet=true
+        B:info_tablet=false
         B:magnet=true
         B:mob_soul=true
         B:nugget=true
