Try to delay the time of timeout

--- a/ServerSide/settings.cfg
+++ b/ServerSide/settings.cfg
@@ -1,6 +1,6 @@
 MAX_RAM=8G
 GAME_ARGS=nogui
-JAVA_ARGS=-d64 -server -XX:+AggressiveOpts -XX:ParallelGCThreads=4 -XX:+UseConcMarkSweepGC -XX:+UnlockExperimentalVMOptions -XX:+UseParNewGC -XX:+ExplicitGCInvokesConcurrent -XX:+UseFastAccessorMethods -XX:+OptimizeStringConcat -XX:+UseAdaptiveGCBoundary -Dfml.queryResult=confirm
+JAVA_ARGS=-d64 -server -XX:+AggressiveOpts -XX:ParallelGCThreads=4 -XX:+UseConcMarkSweepGC -XX:+UnlockExperimentalVMOptions -XX:+UseParNewGC -XX:+ExplicitGCInvokesConcurrent -XX:+UseFastAccessorMethods -XX:+OptimizeStringConcat -XX:+UseAdaptiveGCBoundary -Dfml.queryResult=confirm -Dfml.readTimeout=300
 
 CRASH_COUNT=3
 CRASH_TIMER=800
