--- a/config/extendedcrafting.cfg
+++ b/config/extendedcrafting.cfg
@@ -104,7 +104,7 @@ quantum_compression {
 
 recipe_maker {
     # Should the Recipe Maker be enabled? [default: true]
-    B:enabled=true
+    B:enabled=false
 
     # Should the Recipe Maker also copy the NBT of the ingredients? [default: false]
     B:use_nbt=false
