--- a/ServerSide/config/bloodmoon.cfg
+++ b/ServerSide/config/bloodmoon.cfg
@@ -25,7 +25,7 @@ bloodmoon {
 
     schedule {
         # The chance of a bloodmoon occuring at the beginning of a night (0=Never;1=Every night;0.05=5% of all nights)
-        D:Chance=0.05
+        D:Chance=0.03
 
         # Whether there should be a bloodmoon whenever there is a full moon
         B:Fullmoon=false
@@ -37,23 +37,25 @@ bloodmoon {
     spawning {
         # Monsters which names are on this list won't get spawned by the bloodmoon (Has no effect when a whitelist is active). (Example: "Skeleton,Spider")
         S:SpawnBlacklist <
+            divinerpg.crab
+            divinerpg.king_crab
          >
 
         # With which number should the default entity limit be multiplicated on a blood moon
-        I:SpawnLimitMultiplier=5
+        I:SpawnLimitMultiplier=3
 
         # How close can enemys spawn next to the player on a bloodmoon in blocks? (Vanilla=24)
-        I:SpawnRange=2
+        I:SpawnRange=3
 
         # How much faster enemys spawn on a bloodmoon (0=Vanilla)
-        I:SpawnSpeed=5
+        I:SpawnSpeed=3
 
         # If this isn't empty only monsters which names are in this list will get spawned by the bloodmoon. (Example: "Skeleton,Spider")
         S:SpawnWhitelist <
          >
 
         # How close can enemys spawn next to the World Spawn (Vanilla=24)
-        I:WorldSpawnDistance=2
+        I:WorldSpawnDistance=1
     }
 
 }
