--- a/config/jei/itemBlacklist.cfg
+++ b/config/jei/itemBlacklist.cfg
@@ -11,7 +11,12 @@
 advanced {
     # List of ingredients that should not be displayed in the list. Format: modId[:name[:meta]]. Hide Ingredients Mode will automatically add or remove entries here. [Default: []]
     S:itemBlacklist <
-     >
+		enderio:item_material:10
+		buildcraftcore:gear_stone
+		notenoughwands:illumination_wand
+		notenoughwands:protection_wand
+		notenoughwands:master_protection_wand
+	>
 }
 
 
