--- a/config/forgeChunkLoading.cfg
+++ b/config/forgeChunkLoading.cfg
@@ -22,14 +22,14 @@ defaults {
 
     # The default maximum ticket count for a mod which does not have an override
     # in this file. This is the number of chunk loading requests a mod is allowed to make.
-    I:maximumTicketCount=200
+    I:maximumTicketCount=400
 
     # The number of tickets a player can be assigned instead of a mod. This is shared across all mods and it is up to the mods to use it.
     I:playerTicketCount=500
 
     # Unloaded chunks can first be kept in a dormant cache for quicker
     # loading times. Specify the size (in chunks) of that cache here
-    I:dormantChunkCacheSize=0
+    I:dormantChunkCacheSize=96
 
     # Load chunks asynchronously for players, reducing load on the server thread.
     # Can be disabled to help troubleshoot chunk loading issues.
