--- a/ServerSide/config/extrautils2.cfg
+++ b/ServerSide/config/extrautils2.cfg
@@ -27,7 +27,7 @@ enabled {
     B:Book=true
     B:Boomerang=true
     B:ChickenRing=true
-    B:ChunkLoader=true
+    B:ChunkLoader=false
     B:CompoundBow=true
     B:CompressedCobblestone=true
     B:CompressedDirt=true
@@ -35,7 +35,7 @@ enabled {
     B:CompressedNetherrack=true
     B:CompressedSand=true
     B:Contract=true
-    B:Crafter=true
+    B:Crafter=false
     B:CreativeChest=true
     B:CreativeEnergy=true
     B:CreativeHarvest=true
@@ -48,14 +48,14 @@ enabled {
     B:Drum=true
     B:EnderLilly=true
     B:EnderShard=true
-    B:ExtraUtils2_Quarry_Dim=true
+    B:ExtraUtils2_Quarry_Dim=false
     B:FakeCopy=true
     B:Filter=true
     B:FilterFluids=true
     B:FireAxe=true
     B:FlatTransferNode=true
     B:GlassCutter=true
-    B:GoldenLasso=true
+    B:GoldenLasso=false
     B:Indexer=true
     B:IndexerRemote=true
     B:IneffableGlass=true
@@ -71,7 +71,7 @@ enabled {
     B:LuxSaber=true
     B:Machine=true
     B:MagicApple=true
-    B:Miner=true
+    B:Miner=false
     B:MiniChest=true
     B:MoonStone=true
     B:Opinium=true
@@ -81,8 +81,8 @@ enabled {
     B:PowerManager=true
     B:PowerOverload=true
     B:PowerTransmitter=true
-    B:Quarry=true
-    B:QuarryProxy=true
+    B:Quarry=false
+    B:QuarryProxy=false
     B:RainbowGenerator=true
     B:RedOrchid=true
     B:RedstoneClock=true
@@ -137,7 +137,7 @@ enabled {
     B:villager_alchemist=true
     B:villager_red_mechanic=true
     B:villager_shady_merchant=true
-    B:wall_world_type=true
+    B:wall_world_type=false
 }
 
 
