--- a/ServerSide/config/randompatches.cfg
+++ b/ServerSide/config/randompatches.cfg
@@ -215,21 +215,21 @@ speedLimits {
     # Min: 1.0
     # Max: 3.4028234663852886E38
     # Default: 1000000.0
-    D:maxPlayerSpeed=1000000.0
+    D:maxPlayerSpeed=1.0E7
 
     # The maximum player elytra speed.
     # The vanilla default is 300.0.
     # Min: 1.0
     # Max: 3.4028234663852886E38
     # Default: 1000000.0
-    D:maxPlayerElytraSpeed=1000000.0
+    D:maxPlayerElytraSpeed=1.0E7
 
     # The maximum player vehicle speed.
     # The vanilla default is 100.0.
     # Min: 1.0
     # Max: 1.7976931348623157E308
     # Default: 1000000.0
-    D:maxPlayerVehicleSpeed=1000000.0
+    D:maxPlayerVehicleSpeed=1.0E7
 }
 
 
