--- a/config/cyclicmagic.cfg
+++ b/config/cyclicmagic.cfg
@@ -665,7 +665,7 @@ cyclicmagic {
         B:AutomaticTorch=true
 
         # placer_block Set false to delete - requires restart [default: true]
-        B:BlockPlacer=true
+        B:BlockPlacer=false
 
         # tool_randomize Set false to delete - requires restart [default: true]
         B:BlockRandomizer=true
