--- a/config/thaumicaugmentation.cfg
+++ b/config/thaumicaugmentation.cfg
@@ -250,6 +250,23 @@ gameplay {
             D:RailgunRange=64.0
         }
 
+        impetusgenerator {
+            # The maximum amount of FE that can be held in the generator.
+            # Note that if this is lower than EnergyPerImpetus, the generator will never
+            # refill its buffer.
+            I:BufferSize=3000
+
+            # The amount of FE generated per point of Impetus.
+            # Impetus will not be consumed until the internal buffer
+            # can contain at least this amount more FE.
+            I:EnergyPerImpetus=1500
+
+            # The maximum amount of FE that can be extracted per operation.
+            # This *can* be removed multiple times per tick if energy is being pulled,
+            # but the generator itself will only attempt to push energy once per tick.
+            I:MaxExtract=50
+        }
+
     }
 
     augment {
