Ready to upload and verify by twitch

--- a/ServerSide/config/randompatches.cfg
+++ b/ServerSide/config/randompatches.cfg
@@ -110,7 +110,7 @@ client {
 
         # The Minecraft window title.
         # Default: Minecraft 1.12.2
-        S:title=Dangerous World Beta 0.10 (1.0-rc2)
+        S:title=Dangerous World 1.0
     }
 
 }
