--- a/config/ProjectE/mapping.cfg
+++ b/config/ProjectE/mapping.cfg
@@ -52,7 +52,7 @@ mapperconfigurations {
             # Priority for Mod with ModId = divinerpg. Values: 129 [range: 0 ~ 512, default: 1]
             I:divinerpgpriority=1
 
-            # Priority for Mod with ModId = nuclearcraft. Values: 397 [range: 0 ~ 512, default: 1]
+            # Priority for Mod with ModId = nuclearcraft. Values: 408 [range: 0 ~ 512, default: 1]
             I:nuclearcraftpriority=1
         }
 
@@ -126,6 +126,9 @@ mapperconfigurations {
 
                 # Allow 'nuclearcraft' to set and or remove values for 'projectred-exploration'. Options: [both, set, remove, none] [default: both]
                 S:projectred-exploration=both
+
+                # Allow 'nuclearcraft' to set and or remove values for 'railcraft'. Options: [both, set, remove, none] [default: both]
+                S:railcraft=both
 
                 # Allow 'nuclearcraft' to set and or remove values for 'rockhounding_chemistry'. Options: [both, set, remove, none] [default: both]
                 S:rockhounding_chemistry=both
