--- a/config/grue.cfg
+++ b/config/grue.cfg
@@ -14,7 +14,7 @@ general {
      >
 
     # Toggles whether or not to have a grace period after changing dimension before the Grue timer continues to count down.
-    B:"Dimensional Grace Period"=false
+    B:"Dimensional Grace Period"=true
 
     # Toggles whether or not to display the warning text when in dark areas. [CLIENT ONLY]
     B:"Display Warning Text"=true
@@ -28,7 +28,7 @@ general {
 
     # Sets the amount of seconds before the Grue timer resumes after changing dimension.
     # §c[Only used if Grue grace period is enabled]§r [range: 1 ~ 30, default: 5]
-    I:"Grace Period Timer"=5
+    I:"Grace Period Timer"=30
 
     # Toggles the Grue dimension whitelist (used to force the Grues to only spawn in certain dimensions).
     B:"Grue dimension whitelist"=false
