--- a/config/grue.cfg
+++ b/config/grue.cfg
@@ -31,7 +31,7 @@ general {
     I:"Grace Period Timer"=30
 
     # Toggles the Grue dimension whitelist (used to force the Grues to only spawn in certain dimensions).
-    B:"Grue dimension whitelist"=false
+    B:"Grue dimension whitelist"=true
 
     # Change the value to increase the time it takes before a Grue spawns.
     #  [range: 1 ~ 60, default: 10]
@@ -65,7 +65,7 @@ general {
     B:"Use Biome Blacklist"=false
 
     # Toggles whether or not to use the dimension whitelist as a blacklist instead.
-    B:"Use Blacklist"=false
+    B:"Use Blacklist"=true
 
     # Toggles whether or not to display the warning text in the chat rather than above the hotbar.
     B:"Warning text in chat"=false
@@ -73,7 +73,7 @@ general {
     # Add dimension IDs to this list if you want Grues to spawn here.
     # §c[Only used if Grue dimension whitelist is enabled]§r
     I:Whitelist <
-        0
+        427
      >
 
     # Sets the amount of damage (in half-hearts) the Grue deals when Wimp Mode is enabled. [range: 2.0 ~ 100.0, default: 6.0]
