--- a/config/ftblib.cfg
+++ b/config/ftblib.cfg
@@ -58,8 +58,8 @@ teams {
     B:autocreate_mp=false
 
     # Automatically creates (or joins) a team on singleplayer/LAN with ID 'singleplayer'.
-    B:autocreate_sp=true
-    B:disable_teams=false
+    B:autocreate_sp=false
+    B:disable_teams=true
 
     # Disable no team notification entirely.
     B:hide_team_notification=true
