--- a/config/ftbutilities.cfg
+++ b/config/ftbutilities.cfg
@@ -59,7 +59,7 @@ commands {
     B:rec=true
     B:rtp=false
     B:spawn=false
-    B:tpa=true
+    B:tpa=false
     B:tpl=false
     B:trash_can=false
     B:warp=false
