Fixed the config bug of Bewitchment

--- a/ServerSide/config/Bewitchment.cfg
+++ b/ServerSide/config/Bewitchment.cfg
@@ -554,10 +554,10 @@ general {
 
     compat {
         # Enable world gen of dynamic Bewitchment trees instead of the regular trees
-        B:genDynamic=true
+        B:genDynamic=false
 
         # Enable replacing saplings with dynamic trees seeds upon planting (Must have DynamicTrees installed
-        B:replaceSapling=true
+        B:replaceSapling=false
     }
 
     ##########################################################################################################
