Decreased the amount of materials required for singularity from 25k to 22k

--- a/ServerSide/config/extendedcrafting.cfg
+++ b/ServerSide/config/extendedcrafting.cfg
@@ -142,7 +142,7 @@ singularity {
         4;awakened_draconium;draconicevolution:draconic_ingot;F65F26
         5;ice_dragonsteel;ore:ingotIceDragonsteel;04779B
         6;fire_dragonsteel;ore:ingotFireDragonsteel;580B04
-        7;uranium_235;ic2:nuclear:1;32A90C
+        7;cold;ore:ingotColdIron;8397AE
         8;crystaltine;ore:ingotCrystaltine;33ECF2
         9;ender;extendedcrafting:material:36;1D6D23
         10;ionite_crystal;ore:crystalIonite;1DC0C5
@@ -235,7 +235,7 @@ singularity {
     I:energy_cost=2000000000
 
     # The amount of materials required to create a Singularity, for the default recipes. [range: 1 ~ 2147483647, default: 10000]
-    I:material_amount=25000
+    I:material_amount=22000
 
     # Should the default Ultimate Singularity recipe be enabled? [default: true]
     B:ultimate_singularity_recipe=true
