--- a/config/extendedcrafting.cfg
+++ b/config/extendedcrafting.cfg
@@ -140,18 +140,18 @@ singularity {
         2;lyon;ore:ingotLyon;A07828
         3;flint;ore:ingotFlint;606060
         4;awakened_draconium;draconicevolution:draconic_ingot;F65F26
-        5;ice_dragonsteel;ore:ingotIceDragonsteel;04779B
-        6;fire_dragonsteel;ore:ingotFireDragonsteel;580B04
+        5;redstone_ingot;tp:redstone_ingot;E22800
+        6;quartz_ingot;tp:quartz_ingot;ECECEC
         7;cold;ore:ingotColdIron;8397AE
-        8;crystaltine;ore:ingotCrystaltine;33ECF2
+        8;glowstone;mekanism:ingot:3;FFFD6B
         9;ender;extendedcrafting:material:36;1D6D23
         10;ionite_crystal;ore:crystalIonite;1DC0C5
         11;cyanite;ore:ingotCyanite;18D7DD
         12;reinforced_alloy;ore:alloyElite;1AD9FB
         13;yellow_diamond;ore:gemYellowDiamond;E8DF1D
-        14;resonating_gem;astralsorcery:itemcraftingcomponent:4;23AFC8
+        14;mixed_metal;ic2:ingot;DCB72F
         15;starmetal;ore:ingotAstralStarmetal;020E9A
-        16;fluxed_phyto_gro;thermalfoundation:fertilizer:2;94E329
+        16;silicon_carbide;nuclearcraft:alloy:13;716B58
         17;terrestrial_artifact;biomesoplenty:terrestrial_artifact;D8BACF
         18;meteoric_iron;ore:ingotMeteoricIron;5D4E58
         19;desh;ore:ingotDesh;2A2830
