--- a/ServerSide/config/erebus.cfg
+++ b/ServerSide/config/erebus.cfg
@@ -30,7 +30,7 @@ general {
     B:"Play erebus songs"=true
     B:"Random mob names"=true
     B:"Should player re-spawn in dimension"=false
-    B:"Spawn Black Widows in Nether"=true
+    B:"Spawn Black Widows in Nether"=false
 }
 
 
