--- a/config/mekanism.cfg
+++ b/config/mekanism.cfg
@@ -20,7 +20,7 @@ client {
     B:EnablePlayerSounds=true
 
     # Christmas/New Years greetings in chat.
-    B:Holidays=true
+    B:Holidays=false
 
     # Show particles when machines active.
     B:MachineEffects=true
