--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,55 @@
 # Client Side
-/.mixin.out
-/asm
-/assets
-/astralsorcery
-/betweenlands_gallery
-/craftpresence
-/downloads
-/fonts
-/journeymap
-/llibrary
-/local
-/logs
+/.mixin.out/
+/asm/
+/assets/
+/astralsorcery/
+/betweenlands_gallery/
+/craftpresence/
+/crash-reports/
+/downloads/
+/fonts/
+/journeymap/
+/llibrary/
+/local/
+/logs/
 /mods/*.jar
 /mods/1.12.2
 /mods/memory_repo
 /mods/hats/**/*.tbl
-/patchouli_books
-/resourcepacks
-/saves
-/schematics
-/screenshots
-/snapshots-server
-/TombManyGraves
+/mods/OptiFine_1.12.2_HD_U_G5_MOD.jar
+/mputils/
+/patchouli_books/
+/resourcepacks/
+/saves/
+/screenshots/
+/snapshots-server/
+/TombManyGraves/
+/config/AppliedEnergistics2/VersionChecker.cfg
+/config/AppliedEnergistics2/items.csv
+/config/agricraft/json/*
+!/config/agricraft/json/defaults/
+/config/brandon3055/ProjectIntelligence/ModDocs/
+/config/brandon3055/ProjectIntelligence/DocUpdater/
+/config/brandon3055/ProjectIntelligence/PackDocs/
+/config/brandon3055/ResourceCache/
+/config/splash.properties
+/config/jei/bookmarks.ini
+/config/jei/worldSettings.cfg
 .curseclient
 .ReAuth.cfg
 BotaniaVars.dat
 crafttweaker.log
-knownkeys.txt
-minecraftinstance.json
 *.dll
+knownkeys.txt
 options.txt
 optionsof.txt
+optionsshaders.txt
 patchouli_data.json
+minecraftinstance.json
+mtservers.dat
+roots.log
 servers.dat
+servers.dat_old
 usercache.json
 usernamecache.json
 
